--- a/sites/all/themes/hedgecomm/css/global.css
+++ b/sites/all/themes/hedgecomm/css/global.css
@@ -40,6 +40,7 @@ a.button:hover {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Trebuchet MS", Arial, sans-serif;
+  color: #70845c;
 }
 
 /*****************************************************************
@@ -81,6 +82,7 @@ h1, h2, h3, h4, h5, h6 {
 #zone-footer-wrapper {
   background: #8dc63f;
   color: #70845c;
+  padding-top: 20px;
 }
 
 /*****************************************************************
@@ -248,6 +250,133 @@ h1, h2, h3, h4, h5, h6 {
 .block-bedrijf-home .content {
   font-size: 1.231em;
 }
+
+/* Main menu footer */
+.block-main-menu-footer {
+  font-size: 1.077em;
+}
+
+.block-main-menu-footer ul {
+  margin: 0;
+  padding: 0;
+}
+
+.block-main-menu-footer ul li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 45%;
+  float: left;
+  margin-bottom: 10px;
+}
+
+.block-main-menu-footer ul li a {
+  color: #70845c;
+}
+
+.block-main-menu-footer ul li a:hover {
+  color: white;
+}
+
+/* Social Media footer */
+.block-sm-footer h3 {
+  margin-bottom: 5px;
+}
+
+.block-sm-footer ul {
+  margin: 0;
+  padding: 0;
+}
+
+.block-sm-footer ul li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  float: left;
+  margin-right: 10px;
+  width: 44px;
+  height: 45px;
+}
+
+.block-sm-footer ul li a {
+  display: block;
+  width: 44px;
+  height: 45px;
+  background: url(../img/sprite.png) no-repeat left -16px;
+  text-indent: -999em;
+  transition: none;
+  -moz-transition: none;
+  -webkit-transition: none;
+  -o-transition: none;
+}
+
+.block-sm-footer ul li a:hover {
+  background-position: left -61px;
+  transition: none;
+  -moz-transition: none;
+  -webkit-transition: none;
+  -o-transition: none;
+}
+
+.block-sm-footer ul li.twitter a {
+  background: url(../img/sprite.png) no-repeat -44px -16px;
+}
+
+.block-sm-footer ul li.twitter a:hover {
+  background-position: -44px -61px;
+}
+
+.block-sm-footer ul li.linkedin a {
+  background: url(../img/sprite.png) no-repeat -88px -16px;
+}
+
+.block-sm-footer ul li.linkedin a:hover {
+  background-position: -88px -61px;
+}
+
+/* Campaign Monitor subscribe */
+.block-campaign-monitor {
+  text-align: right;
+}
+
+.block-campaign-monitor h2.block-title {
+  font-size: 1.077em;
+  border-bottom: none;
+  color: #70845c;
+  text-align: right;
+}
+
+.block-campaign-monitor form .form-item  {
+  margin-bottom: 0;
+}
+
+.block-campaign-monitor form .form-text {
+  width: 100%;
+  height: 25px;
+  line-height: 25px;
+  border: 1px solid #70845c;
+  padding-right: 80px;
+}
+
+.block-campaign-monitor form .form-submit {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background: #70845c;
+  color: #8dc63f;
+  height: 25px;
+  line-height: 25px;
+  cursor: pointer;
+  width: 95px;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 0;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  text-shadow: none;
+}
+
 
 /* Lijn tekst footer */
 .block-footer-line {
